need to fix header being overlapped by text on scroll

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 1rem 0 3rem 0;
-  position: sticky;
+  //position: sticky;
   top: 0;
   width: 100%;
   color: inherit;
