--- a/src/pages/uses.module.scss
+++ b/src/pages/uses.module.scss
@@ -26,7 +26,8 @@
   }
 }
 
-h3 {margin-top: 2rem}
+h3 {margin-top: 2rem;
+text-decoration: none;}
 
 li {
   clear: left;}
